# intermediator

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  config.lua  dynamicserver.rc  intermediator.rc  vcpkg.json
.ds/modules/: packets.lua  tables.lua
.it/: dynamicserver.lua
.it/modules/: packets.lua
.luaconfig/: launch.json
events/: test.lua
http/verify/: error.html  ok.html
lib/lua5.4/include/: lauxlib.h  luaconf.h
options/main/: options_main.yy
src/: main.c
src/api/: intermediate.c  intermediate.h  scripting_api.c  scripting_api.h
src/api/modules/: console.c  console.h  modules.h  packets.c  packets.h  players.c  players.h  tables.c  tables.h
src/data/: crypto.c  crypto.h  databuffer.c  databuffer.h  hashtable.c  hashtable.h  mutex.c  mutex.h  result.c  result.h  stringext.c
src/io/: console.c  console.h  fs.c  fs.h
src/net/: client.c  client.h  discord.c  discord.h  http.c  http.h  server.c  server.h  socket.c  socket.h
src/networking/: client.c  client.h  server.c  server.h  socket.c  socket.h
src/scripting/: intermediate.c  intermediate.h  scripting_api.c  scripting_api.h
src/scripting/modules/: modules.h  net.c  net.h  packets.c  packets.h  players.c  players.h
src/structures/: hashtable.c  hashtable.h  result.h  vector.c  vector.h
src/util/: crypto.h  ext.h  fs.c  fs.h  log.h  win.h  win32.h
src/win32/: fs.c  fs.h  mutex.c  mutex.h  socket.c  socket.h  win32.h
